tests/valid/definite/IntMul_Valid_1.whiley
void System::main([string] args):
    x = 2*3+1
    print str(x)
