tests/invalid/simple/RealAdd_CompileFail_1.whiley
void System::main([string] args):
    int x
    x = 1
    x = x + 2.3
